--- a/de/home/index.html
+++ b/de/home/index.html
@@ -7,17 +7,17 @@
 
     <title>Startseite | Berkay Yıldız Architektur</title>
     <meta name="description"
-        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative architektonische Designs für modernes Wohnen und kommerzielle Räume spezialisiert hat.">
+        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative Architekturdesigns für modernes Wohnen und Geschäftsräume spezialisiert hat.">
     <meta property="og:title" content="Startseite | Berkay Yıldız Architektur">
     <meta property="og:description"
-        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative architektonische Designs für modernes Wohnen und kommerzielle Räume spezialisiert hat.">
+        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative Architekturdesigns für modernes Wohnen und Geschäftsräume spezialisiert hat.">
     <meta property="og:image" content="../../images/homepage-banner.jpg">
     <meta property="og:url" content="https://berkayyildizmimarlik.com/de/home">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Startseite | Berkay Yıldız Architektur">
     <meta name="twitter:description"
-        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative architektonische Designs für modernes Wohnen und kommerzielle Räume spezialisiert hat.">
+        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative Architekturdesigns für modernes Wohnen und Geschäftsräume spezialisiert hat.">
     <meta name="twitter:image" content="../../images/homepage-banner.jpg">
 
     <link rel="canonical" href="https://berkayyildizmimarlik.com/de/home/">
@@ -52,13 +52,14 @@
             <video class="home-video" playsinline autoplay muted loop>
                 <source src="../../images/bya-hero.webm" type="video/webm">
                 <source src="../../images/bya-hero.mp4" type="video/mp4">
-                Ihr Browser unterstützt das Video-Tag nicht. Erleben Sie modernes Design mit Berkay Yıldız Architektur.
+                Ihr Browser unterstützt das Video-Tag nicht. Entdecken Sie modernes Design mit Berkay Yıldız
+                Architektur.
             </video>
         </div>
 
         <div class="prism-container">
             <img class="toggling-text" src="../../images/toggling-text.gif"
-                alt="Animierter Text, der Berkay Yıldız Architektur zeigt" height="80" loading="lazy">
+                alt="Animierter Text zeigt Berkay Yıldız Architektur" height="80" loading="lazy">
         </div>
     </section>
 
