--- a/de/uber-uns/index.html
+++ b/de/uber-uns/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>About | Berkay Yıldız Architecture</title>
+    <title>Über Uns | Berkay Yıldız Architektur</title>
     <meta name="description"
-        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
-    <meta property="og:title" content="About Us | Berkay Yıldız Architecture">
+        content="Erfahren Sie mehr über Berkay Yıldız Architektur, unsere Leidenschaft für Design und wie wir einzigartige architektonische Lösungen schaffen.">
+    <meta property="og:title" content="Über Uns | Berkay Yıldız Architektur">
     <meta property="og:description"
-        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
+        content="Erfahren Sie mehr über Berkay Yıldız Architektur, unsere Leidenschaft für Design und wie wir einzigartige architektonische Lösungen schaffen.">
     <meta property="og:image" content="https://berkayyildizmimarlik.com/images/about-us-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/about">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/de/uber-uns">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="About Us | Berkay Yıldız Architecture">
+    <meta name="twitter:title" content="Über Uns | Berkay Yıldız Architektur">
     <meta name="twitter:description"
-        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
+        content="Erfahren Sie mehr über Berkay Yıldız Architektur, unsere Leidenschaft für Design und wie wir einzigartige architektonische Lösungen schaffen.">
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/about-us-banner.jpg">
 
 
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
+
     <script src="../js/script-de.js" defer></script>
     <script src="../js/navbar-de.js" defer></script>
     <script src="../js/footer-de.js" defer></script>
-    <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
@@ -44,7 +45,7 @@
 
 <body>
 
-    <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+    <div id="navbar-placeholder"></div> <!-- Platzhalter für die Navigationsleiste -->
 
     <section class="about-section">
         <div class="about-bg-lines">
@@ -58,13 +59,13 @@
                     <h3 class="about-h3"><span style="    display: inline-flex;
                         margin-right: 8px;
                         border-top: 2px solid black;
-                        /* line-height: 50px; */
                         height: 70px;
                         justify-content: flex-end;
-                        align-items: flex-end;">We</span> create
-                        spaces <br>
-                        that inspire <br>
-                        tomorrow.</h3>
+                        align-items: flex-end;">Wir</span> schaffen
+                        <br>
+                        Räume, die<br>
+                        morgen inspirieren.
+                    </h3>
                 </div>
                 <div class="circle about">
 
@@ -72,16 +73,14 @@
             </div>
 
 
-            <p class="about-p">Berkay Yıldız Architecture is an Izmir-based studio specializing in contemporary
-                architecture, interior
-                design, and landscape
-                integration. Since our inception, we have dedicated ourselves to creating spaces that are not only
-                functional but also deeply connected to their surroundings.<br>
+            <p class="about-p">Berkay Yıldız Architektur ist ein in Izmir ansässiges Studio, das sich auf
+                zeitgenössische Architektur, Innenarchitektur und Landschaftsintegration spezialisiert hat. Seit
+                unserer Gründung widmen wir uns der Schaffung von Räumen, die nicht nur funktional sind, sondern
+                auch eine tiefe Verbindung zu ihrer Umgebung haben.<br>
                 <br>
-                We collaborate closely with clients and project partners at every stage of the process, including
-                permitting, implementation, interior design, and visualization, ensuring that the original intent
-                seamlessly
-                transforms into the final result.
+                Wir arbeiten eng mit Kunden und Projektpartnern in jeder Phase des Prozesses zusammen – von der
+                Genehmigung über die Umsetzung bis hin zu Innenarchitektur und Visualisierung – und sorgen
+                dafür, dass die ursprüngliche Absicht nahtlos in das Endergebnis übergeht.
             </p>
         </div>
     </section>
