--- a/tr/anasayfa/index.html
+++ b/tr/anasayfa/index.html
@@ -7,17 +7,17 @@
 
     <title>Anasayfa | Berkay Yıldız Mimarlık</title>
     <meta name="description"
-        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
+        content="Berkay Yıldız Mimarlık'a hoş geldiniz! Modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar sunan yaratıcı bir firma.">
     <meta property="og:title" content="Anasayfa | Berkay Yıldız Mimarlık">
     <meta property="og:description"
-        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
+        content="Berkay Yıldız Mimarlık'a hoş geldiniz! Modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar sunan yaratıcı bir firma.">
     <meta property="og:image" content="../../images/homepage-banner.jpg">
     <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/anasayfa">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Anasayfa | Berkay Yıldız Mimarlık">
     <meta name="twitter:description"
-        content="Berkay Yıldız Mimarlık, modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar konusunda uzmanlaşmış bir firmadır.">
+        content="Berkay Yıldız Mimarlık'a hoş geldiniz! Modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar sunan yaratıcı bir firma.">
     <meta name="twitter:image" content="../../images/homepage-banner.jpg">
 
     <link rel="canonical" href="https://berkayyildizmimarlik.com/tr/anasayfa/">
@@ -52,13 +52,13 @@
             <video class="home-video" playsinline autoplay muted loop>
                 <source src="../../images/bya-hero.webm" type="video/webm">
                 <source src="../../images/bya-hero.mp4" type="video/mp4">
-                Tarayıcınız video etiketini desteklemiyor. Berkay Yıldız Mimarlık ile modern bir deneyim yaşayın.
+                Tarayıcınız video etiketini desteklemiyor. Berkay Yıldız Mimarlık ile modern tasarımı keşfedin.
             </video>
         </div>
 
         <div class="prism-container">
             <img class="toggling-text" src="../../images/toggling-text.gif"
-                alt="Berkay Yıldız Mimarlık'ı gösteren animasyonlu metin" height="80" loading="lazy">
+                alt="Berkay Yıldız Mimarlık'ı sergileyen animasyonlu metin" height="80" loading="lazy">
         </div>
     </section>
 
