--- a/tr/calismalarimiz/index.html
+++ b/tr/calismalarimiz/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Works | Berkay Yıldız Architecture</title>
+    <title>Çalışmalarımız | Berkay Yıldız Mimarlık</title>
     <meta name="description"
-        content="View the portfolio of Berkay Yıldız Architecture, showcasing innovative designs and completed projects across various architectural styles.">
-    <meta property="og:title" content="Our Works | Berkay Yıldız Architecture">
+        content="Berkay Yıldız Mimarlık portföyünü inceleyin, yenilikçi tasarımlar ve çeşitli mimari tarzlarda tamamlanmış projeleri keşfedin.">
+    <meta property="og:title" content="Çalışmalarımız | Berkay Yıldız Mimarlık">
     <meta property="og:description"
-        content="View the portfolio of Berkay Yıldız Architecture, showcasing innovative designs and completed projects across various architectural styles.">
+        content="Berkay Yıldız Mimarlık portföyünü inceleyin, yenilikçi tasarımlar ve çeşitli mimari tarzlarda tamamlanmış projeleri keşfedin.">
     <meta property="og:image" content="https://berkayyildizmimarlik.com/images/works-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/works">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/calismalarimiz">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Our Works | Berkay Yıldız Architecture">
+    <meta name="twitter:title" content="Çalışmalarımız | Berkay Yıldız Mimarlık">
     <meta name="twitter:description"
-        content="View the portfolio of Berkay Yıldız Architecture, showcasing innovative designs and completed projects across various architectural styles.">
+        content="Berkay Yıldız Mimarlık portföyünü inceleyin, yenilikçi tasarımlar ve çeşitli mimari tarzlarda tamamlanmış projeleri keşfedin.">
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/works-banner.jpg">
 
-
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
-    <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
 
     <script src="../js/script-tr.js" defer></script>
     <script src="../js/navbar-tr.js" defer></script>
@@ -45,48 +44,46 @@
 
 <body>
 
-    <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+    <div id="navbar-placeholder"></div> <!-- Navbar yer tutucu -->
 
     <section class="works-section">
         <div class="works-container">
             <div class="work">
                 <img src="../../images/mutfak.jpg" alt="mutfak" class="work-image">
                 <div class="work-name">
-                    <h3 class="work-h3">MY Kitchen Design</h3>
-                    <p class="work-p">Interior Design</p>
+                    <h3 class="work-h3">MY Mutfak Tasarımı</h3>
+                    <p class="work-p">İç Mekan Tasarımı</p>
                 </div>
             </div>
             <div class="work">
                 <img src="../../images/banyo.jpg" alt="banyo" class="work-image">
                 <div class="work-name">
-                    <h3 class="work-h3">OS Bathroom Design</h3>
-                    <p class="work-p">Interior Design</p>
+                    <h3 class="work-h3">OS Banyo Tasarımı</h3>
+                    <p class="work-p">İç Mekan Tasarımı</p>
                 </div>
             </div>
             <div class="work">
-                <img src="../../images/salon.jpg" alt="" class="work-image">
+                <img src="../../images/salon.jpg" alt="salon" class="work-image">
                 <div class="work-name">
-                    <h3 class="work-h3">SY Livingroom Design</h3>
-                    <p class="work-p">Interior Design</p>
+                    <h3 class="work-h3">SY Salon Tasarımı</h3>
+                    <p class="work-p">İç Mekan Tasarımı</p>
                 </div>
             </div>
             <div class="work">
-                <img src="../../images/house1.jpg" alt="" class="work-image">
+                <img src="../../images/house1.jpg" alt="ev tasarımı" class="work-image">
                 <div class="work-name">
-                    <h3 class="work-h3">SS House</h3>
-                    <p class="work-p">Architecture</p>
+                    <h3 class="work-h3">SS Evi</h3>
+                    <p class="work-p">Mimarlık</p>
                 </div>
             </div>
             <div class="work">
-                <img src="../../images/house2.jpg" alt="" class="work-image">
+                <img src="../../images/house2.jpg" alt="ev tasarımı" class="work-image">
                 <div class="work-name">
-                    <h3 class="work-h3">SS House</h3>
-                    <p class="work-p">Architecture</p>
+                    <h3 class="work-h3">SS Evi</h3>
+                    <p class="work-p">Mimarlık</p>
                 </div>
             </div>
         </div>
-
-
     </section>
     <div id="footer-placeholder"></div>
 
