--- a/tr/hakkimizda/index.html
+++ b/tr/hakkimizda/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>About | Berkay Yıldız Architecture</title>
+    <title>Hakkımızda | Berkay Yıldız Mimarlık</title>
     <meta name="description"
-        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
-    <meta property="og:title" content="About Us | Berkay Yıldız Architecture">
+        content="Berkay Yıldız Mimarlık, tasarım tutkumuz ve benzersiz mimari çözümler yaratma yaklaşımımız hakkında daha fazla bilgi edinin.">
+    <meta property="og:title" content="Hakkımızda | Berkay Yıldız Mimarlık">
     <meta property="og:description"
-        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
+        content="Berkay Yıldız Mimarlık, tasarım tutkumuz ve benzersiz mimari çözümler yaratma yaklaşımımız hakkında daha fazla bilgi edinin.">
     <meta property="og:image" content="https://berkayyildizmimarlik.com/images/about-us-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/about">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/hakkimizda">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="About Us | Berkay Yıldız Architecture">
+    <meta name="twitter:title" content="Hakkımızda | Berkay Yıldız Mimarlık">
     <meta name="twitter:description"
-        content="Learn more about Berkay Yıldız Architecture, our passion for design, and how we create unique architectural solutions.">
+        content="Berkay Yıldız Mimarlık, tasarım tutkumuz ve benzersiz mimari çözümler yaratma yaklaşımımız hakkında daha fazla bilgi edinin.">
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/about-us-banner.jpg">
 
 
     <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
+
     <script src="../js/script-tr.js" defer></script>
     <script src="../js/navbar-tr.js" defer></script>
     <script src="../js/footer-tr.js" defer></script>
@@ -44,7 +45,7 @@
 
 <body>
 
-    <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+    <div id="navbar-placeholder"></div> <!-- Navbar yer tutucu -->
 
     <section class="about-section">
         <div class="about-bg-lines">
@@ -58,13 +59,13 @@
                     <h3 class="about-h3"><span style="    display: inline-flex;
                         margin-right: 8px;
                         border-top: 2px solid black;
-                        /* line-height: 50px; */
                         height: 70px;
                         justify-content: flex-end;
-                        align-items: flex-end;">We</span> create
-                        spaces <br>
-                        that inspire <br>
-                        tomorrow.</h3>
+                        align-items: flex-end;">Biz</span> geleceği
+                        <br>
+                        ilham veren<br>
+                        mekanlar yaratırız.
+                    </h3>
                 </div>
                 <div class="circle about">
 
@@ -72,16 +73,13 @@
             </div>
 
 
-            <p class="about-p">Berkay Yıldız Architecture is an Izmir-based studio specializing in contemporary
-                architecture, interior
-                design, and landscape
-                integration. Since our inception, we have dedicated ourselves to creating spaces that are not only
-                functional but also deeply connected to their surroundings.<br>
+            <p class="about-p">Berkay Yıldız Mimarlık, çağdaş mimarlık, iç mekan tasarımı ve peyzaj entegrasyonu
+                konusunda uzmanlaşmış İzmir merkezli bir stüdyodur. Kurulduğumuz günden bu yana yalnızca işlevsel
+                değil, aynı zamanda çevreleriyle derin bir bağ kuran mekanlar yaratmaya kendimizi adadık.<br>
                 <br>
-                We collaborate closely with clients and project partners at every stage of the process, including
-                permitting, implementation, interior design, and visualization, ensuring that the original intent
-                seamlessly
-                transforms into the final result.
+                Sürecin her aşamasında müşterilerimiz ve proje ortaklarımızla yakın iş birliği yapıyoruz; ruhsat
+                alma, uygulama, iç mekan tasarımı ve görselleştirme dahil olmak üzere. Böylece orijinal amaç,
+                sorunsuz bir şekilde nihai sonuca dönüşür.
             </p>
         </div>
     </section>
