--- a/tr/hizmetlerimiz/index.html
+++ b/tr/hizmetlerimiz/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Services | Berkay Yıldız Architecture</title>
+    <title>Hizmetlerimiz | Berkay Yıldız Mimarlık</title>
     <meta name="description"
-        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
-    <meta property="og:title" content="Our Services | Berkay Yıldız Architecture">
+        content="Berkay Yıldız Mimarlık'ın sunduğu profesyonel hizmetleri keşfedin; konut, ticari ve kentsel tasarım çözümleri.">
+    <meta property="og:title" content="Hizmetlerimiz | Berkay Yıldız Mimarlık">
     <meta property="og:description"
-        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
+        content="Berkay Yıldız Mimarlık'ın sunduğu profesyonel hizmetleri keşfedin; konut, ticari ve kentsel tasarım çözümleri.">
     <meta property="og:image" content="https://berkayyildizmimarlik.com/images/services-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/services">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/hizmetlerimiz">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Our Services | Berkay Yıldız Architecture">
+    <meta name="twitter:title" content="Hizmetlerimiz | Berkay Yıldız Mimarlık">
     <meta name="twitter:description"
-        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
+        content="Berkay Yıldız Mimarlık'ın sunduğu profesyonel hizmetleri keşfedin; konut, ticari ve kentsel tasarım çözümleri.">
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/services-banner.jpg">
 
 
@@ -27,9 +27,6 @@
     <script src="../js/script-tr.js" defer></script>
     <script src="../js/navbar-tr.js" defer></script>
     <script src="../js/footer-tr.js" defer></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-    </style>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -48,25 +45,22 @@
 
 <body>
 
-    <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+    <div id="navbar-placeholder"></div> <!-- Navbar yer tutucu -->
 
     <section class="services-section">
-
 
         <div class="services-container">
             <div class="service">
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/triangle-glass.jpg" alt="placeholder">
                 </div>
-                <h3 class="service-h3">Architecture</h3>
+                <h3 class="service-h3">Mimarlık</h3>
 
                 <p class="service-p">
-                    At Berkay Yıldız Architecture, we don’t just design spaces; we create experiences. From concept
-                    development
-                    to the finest construction details, every project—whether residential or
-                    commercial—reflects our commitment to quality, innovation, and sustainability. Driven by
-                    a passion for design that goes beyond aesthetics, we transform ideas into functional,
-                    enduring spaces that inspire.
+                    Berkay Yıldız Mimarlık'ta sadece mekanlar tasarlamıyoruz; deneyimler yaratıyoruz. Konsept
+                    geliştirmeden ince yapım detaylarına kadar her proje—ister konut ister ticari olsun—
+                    kalite, yenilik ve sürdürülebilirliğe bağlılığımızı yansıtır. Estetiğin ötesine geçen
+                    tasarım tutkusuyla fikirleri işlevsel, ilham verici mekanlara dönüştürüyoruz.
                 </p>
 
             </div>
@@ -74,13 +68,11 @@
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/table-chair.jpg" alt="placeholder">
                 </div>
-                <h3 class="service-h3">Interior Design</h3>
-                <p class="service-p">At Berkay Yıldız Architecture, we believe in the importance of seamless integration
-                    between
-                    architecture and
-                    interior design to ensure the overall harmony of every project. That’s why we not only
-                    handle architectural designs but also offer meticulously crafted interior design
-                    solutions.
+                <h3 class="service-h3">İç Tasarım</h3>
+                <p class="service-p">Berkay Yıldız Mimarlık olarak her projenin genel uyumunu sağlamak için
+                    mimarlık ve iç tasarım arasında kesintisiz bir entegrasyonun önemine inanıyoruz. Bu nedenle
+                    sadece mimari tasarımlar yapmakla kalmıyor, aynı zamanda özenle hazırlanmış iç tasarım
+                    çözümleri de sunuyoruz.
                 </p>
                 <div class="horizontal-line line2"></div>
 
@@ -89,17 +81,16 @@
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/weird-columns.jpg" alt="placeholder">
                 </div>
-                <h3 class="service-h3">Visualization</h3>
-                <p class="service-p">We view ourselves as storytellers rather than mere creators of images. Our goal is
-                    not
-                    just to produce visually appealing content but to capture the essence and true potential
-                    of each project in an authentic manner.
+                <h3 class="service-h3">Görselleştirme</h3>
+                <p class="service-p">Kendimizi sadece görüntü üreticileri olarak değil, hikaye anlatıcıları olarak
+                    görüyoruz. Amacımız sadece görsel olarak etkileyici içerik üretmek değil, her projenin
+                    özünü ve gerçek potansiyelini otantik bir şekilde yakalamaktır.
                     <br>
                     <br>
-                    We aspire for our clients to take pride in the visuals we deliver, reflecting our shared
-                    commitment to excellence. Utilizing a blend of innovative tools and techniques, we aim
-                    to craft visuals that not only impress but also inspire an emotional connection with
-                    viewers.
+                    Teslim ettiğimiz görsellerde müşterilerimizin gurur duymasını hedefliyoruz ve ortak
+                    mükemmeliyet anlayışımızı yansıtıyoruz. Yenilikçi araçlar ve teknikler kullanarak sadece
+                    etkileyici değil, aynı zamanda izleyicilerle duygusal bir bağ kuran görseller üretmeyi
+                    amaçlıyoruz.
                 </p>
                 <div class="horizontal-line line1"></div>
             </div>
@@ -109,9 +100,9 @@
             <div class="horizontal-line left-line"></div>
             <div class="circle" style="display: none;"></div>
             <div class="rectanglular-bg"></div>
-            <a href="https://berkayyildizmimarlik.com/works/"
+            <a href="https://berkayyildizmimarlik.com/tr/calismalarimiz/"
                 style="text-decoration: none; color: black; height: 100%;">
-                <p class="view-portfolio-p">View Portfolio</p>
+                <p class="view-portfolio-p">Portföyü Gör</p>
             </a>
         </div>
 
