--- a/de/dienstleistungen/index.html
+++ b/de/dienstleistungen/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Services | Berkay Yıldız Architecture</title>
+    <title>Dienstleistungen | Berkay Yıldız Architektur</title>
     <meta name="description"
-        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
-    <meta property="og:title" content="Our Services | Berkay Yıldız Architecture">
+        content="Entdecken Sie die professionellen Dienstleistungen von Berkay Yıldız Architektur, einschließlich Wohn-, Gewerbe- und Stadtgestaltungslösungen.">
+    <meta property="og:title" content="Dienstleistungen | Berkay Yıldız Architektur">
     <meta property="og:description"
-        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
+        content="Entdecken Sie die professionellen Dienstleistungen von Berkay Yıldız Architektur, einschließlich Wohn-, Gewerbe- und Stadtgestaltungslösungen.">
     <meta property="og:image" content="https://berkayyildizmimarlik.com/images/services-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/services">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/de/dienstleistungen">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Our Services | Berkay Yıldız Architecture">
+    <meta name="twitter:title" content="Dienstleistungen | Berkay Yıldız Architektur">
     <meta name="twitter:description"
-        content="Explore the professional services offered by Berkay Yıldız Architecture, including residential, commercial, and urban design solutions.">
+        content="Entdecken Sie die professionellen Dienstleistungen von Berkay Yıldız Architektur, einschließlich Wohn-, Gewerbe- und Stadtgestaltungslösungen.">
     <meta name="twitter:image" content="https://berkayyildizmimarlik.com/images/services-banner.jpg">
 
 
@@ -27,9 +27,6 @@
     <script src="../js/script-de.js" defer></script>
     <script src="../js/navbar-de.js" defer></script>
     <script src="../js/footer-de.js" defer></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-    </style>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
@@ -48,25 +45,23 @@
 
 <body>
 
-    <div id="navbar-placeholder"></div> <!-- Placeholder for the navbar -->
+    <div id="navbar-placeholder"></div> <!-- Platzhalter für die Navigationsleiste -->
 
     <section class="services-section">
-
 
         <div class="services-container">
             <div class="service">
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/triangle-glass.jpg" alt="placeholder">
                 </div>
-                <h3 class="service-h3">Architecture</h3>
+                <h3 class="service-h3">Architektur</h3>
 
                 <p class="service-p">
-                    At Berkay Yıldız Architecture, we don’t just design spaces; we create experiences. From concept
-                    development
-                    to the finest construction details, every project—whether residential or
-                    commercial—reflects our commitment to quality, innovation, and sustainability. Driven by
-                    a passion for design that goes beyond aesthetics, we transform ideas into functional,
-                    enduring spaces that inspire.
+                    Bei Berkay Yıldız Architektur entwerfen wir nicht nur Räume, sondern schaffen Erlebnisse. Von der
+                    Konzeptentwicklung bis hin zu den feinsten Baudetails spiegeln alle Projekte – ob Wohn- oder
+                    Gewerbebau – unser Engagement für Qualität, Innovation und Nachhaltigkeit wider. Mit einer
+                    Leidenschaft für Design, die über Ästhetik hinausgeht, verwandeln wir Ideen in funktionale,
+                    inspirierende Räume.
                 </p>
 
             </div>
@@ -74,13 +69,11 @@
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/table-chair.jpg" alt="placeholder">
                 </div>
-                <h3 class="service-h3">Interior Design</h3>
-                <p class="service-p">At Berkay Yıldız Architecture, we believe in the importance of seamless integration
-                    between
-                    architecture and
-                    interior design to ensure the overall harmony of every project. That’s why we not only
-                    handle architectural designs but also offer meticulously crafted interior design
-                    solutions.
+                <h3 class="service-h3">Innenarchitektur</h3>
+                <p class="service-p">Bei Berkay Yıldız Architektur glauben wir an die Bedeutung einer nahtlosen
+                    Integration zwischen Architektur und Innenarchitektur, um die Gesamtharmonie jedes Projekts zu
+                    gewährleisten. Deshalb bieten wir nicht nur architektonische Entwürfe, sondern auch sorgfältig
+                    gestaltete Lösungen für die Innenarchitektur an.
                 </p>
                 <div class="horizontal-line line2"></div>
 
@@ -89,17 +82,16 @@
                 <div class="service-image-wrapper">
                     <img class="service-image" src="/images/weird-columns.jpg" alt="placeholder">
                 </div>
-                <h3 class="service-h3">Visualization</h3>
-                <p class="service-p">We view ourselves as storytellers rather than mere creators of images. Our goal is
-                    not
-                    just to produce visually appealing content but to capture the essence and true potential
-                    of each project in an authentic manner.
+                <h3 class="service-h3">Visualisierung</h3>
+                <p class="service-p">Wir sehen uns als Geschichtenerzähler und nicht nur als einfache Ersteller von
+                    Bildern. Unser Ziel ist es, nicht nur visuell ansprechende Inhalte zu produzieren, sondern das
+                    Wesen und das wahre Potenzial jedes Projekts authentisch einzufangen.
                     <br>
                     <br>
-                    We aspire for our clients to take pride in the visuals we deliver, reflecting our shared
-                    commitment to excellence. Utilizing a blend of innovative tools and techniques, we aim
-                    to craft visuals that not only impress but also inspire an emotional connection with
-                    viewers.
+                    Wir möchten, dass unsere Kunden stolz auf die von uns gelieferten Visualisierungen sind, die
+                    unser gemeinsames Engagement für Exzellenz widerspiegeln. Mit innovativen Werkzeugen und
+                    Techniken streben wir danach, Visualisierungen zu schaffen, die nicht nur beeindrucken, sondern
+                    auch eine emotionale Verbindung zu den Betrachtern herstellen.
                 </p>
                 <div class="horizontal-line line1"></div>
             </div>
@@ -109,9 +101,9 @@
             <div class="horizontal-line left-line"></div>
             <div class="circle" style="display: none;"></div>
             <div class="rectanglular-bg"></div>
-            <a href="https://berkayyildizmimarlik.com/works/"
+            <a href="https://berkayyildizmimarlik.com/de/projekte/"
                 style="text-decoration: none; color: black; height: 100%;">
-                <p class="view-portfolio-p">View Portfolio</p>
+                <p class="view-portfolio-p">Portfolio ansehen</p>
             </a>
         </div>
 
