--- a/de/index.html
+++ b/de/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Home | Berkay Yıldız Architecture</title>
+    <title>Startseite | Berkay Yıldız Architektur</title>
     <meta name="description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
-    <meta property="og:title" content="Home | Berkay Yıldız Architecture">
+        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative Architekturdesigns für modernes Wohnen und Geschäftsräume spezialisiert hat.">
+    <meta property="og:title" content="Startseite | Berkay Yıldız Architektur">
     <meta property="og:description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
+        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative Architekturdesigns für modernes Wohnen und Geschäftsräume spezialisiert hat.">
     <meta property="og:image" content="../../images/homepage-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/en/home">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/de/startseite">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Home | Berkay Yıldız Architecture">
+    <meta name="twitter:title" content="Startseite | Berkay Yıldız Architektur">
     <meta name="twitter:description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
+        content="Willkommen bei Berkay Yıldız Architektur, einem kreativen Unternehmen, das sich auf innovative Architekturdesigns für modernes Wohnen und Geschäftsräume spezialisiert hat.">
     <meta name="twitter:image" content="../../images/homepage-banner.jpg">
 
-    <link rel="canonical" href="https://berkayyildizmimarlik.com/en/home/">
-    <link rel="stylesheet" href="../../css/style.css" type="text/css" media="all" />
-    <link rel="icon" type="image/png" href="../../images/fav-icon.png" sizes="32x32">
+    <link rel="canonical" href="https://berkayyildizmimarlik.com/de/startseite/">
+    <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
+    <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
 
     <script src="js/script-de.js" defer></script>
     <script src="js/navbar-de.js" defer></script>
@@ -47,18 +47,19 @@
 
     <!-- Home Section -->
     <section class="home-section">
-        <h1 class="visually-hidden">Berkay Yıldız Architecture - Modern and Creative Designs</h1>
+        <h1 class="visually-hidden">Berkay Yıldız Architektur - Moderne und Kreative Designs</h1>
         <div class="home-video-container">
             <video class="home-video" playsinline autoplay muted loop>
                 <source src="../../images/bya-hero.webm" type="video/webm">
                 <source src="../../images/bya-hero.mp4" type="video/mp4">
-                Your browser does not support the video tag. Experience modern design with Berkay Yıldız Architecture.
+                Ihr Browser unterstützt das Video-Tag nicht. Entdecken Sie modernes Design mit Berkay Yıldız
+                Architektur.
             </video>
         </div>
 
         <div class="prism-container">
             <img class="toggling-text" src="../../images/toggling-text.gif"
-                alt="Animated text showcasing Berkay Yıldız Architecture" height="80" loading="lazy">
+                alt="Animierter Text zeigt Berkay Yıldız Architektur" height="80" loading="lazy">
         </div>
     </section>
 
