--- a/tr/index.html
+++ b/tr/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Home | Berkay Yıldız Architecture</title>
+    <title>Anasayfa | Berkay Yıldız Mimarlık</title>
     <meta name="description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
-    <meta property="og:title" content="Home | Berkay Yıldız Architecture">
+        content="Berkay Yıldız Mimarlık'a hoş geldiniz! Modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar sunan yaratıcı bir firma.">
+    <meta property="og:title" content="Anasayfa | Berkay Yıldız Mimarlık">
     <meta property="og:description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
+        content="Berkay Yıldız Mimarlık'a hoş geldiniz! Modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar sunan yaratıcı bir firma.">
     <meta property="og:image" content="../../images/homepage-banner.jpg">
-    <meta property="og:url" content="https://berkayyildizmimarlik.com/en/home">
+    <meta property="og:url" content="https://berkayyildizmimarlik.com/tr/anasayfa">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Home | Berkay Yıldız Architecture">
+    <meta name="twitter:title" content="Anasayfa | Berkay Yıldız Mimarlık">
     <meta name="twitter:description"
-        content="Welcome to Berkay Yıldız Architecture, a creative firm specializing in innovative architectural designs for modern living and commercial spaces.">
+        content="Berkay Yıldız Mimarlık'a hoş geldiniz! Modern yaşam ve ticari alanlar için yenilikçi mimari tasarımlar sunan yaratıcı bir firma.">
     <meta name="twitter:image" content="../../images/homepage-banner.jpg">
 
-    <link rel="canonical" href="https://berkayyildizmimarlik.com/en/home/">
+    <link rel="canonical" href="https://berkayyildizmimarlik.com/tr/anasayfa/">
     <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
     <link rel="icon" type="image/png" href="../images/fav-icon.png" sizes="32x32">
 
@@ -47,18 +47,18 @@
 
     <!-- Home Section -->
     <section class="home-section">
-        <h1 class="visually-hidden">Berkay Yıldız Architecture - Modern and Creative Designs</h1>
+        <h1 class="visually-hidden">Berkay Yıldız Mimarlık - Modern ve Yaratıcı Tasarımlar</h1>
         <div class="home-video-container">
             <video class="home-video" playsinline autoplay muted loop>
                 <source src="../../images/bya-hero.webm" type="video/webm">
                 <source src="../../images/bya-hero.mp4" type="video/mp4">
-                Your browser does not support the video tag. Experience modern design with Berkay Yıldız Architecture.
+                Tarayıcınız video etiketini desteklemiyor. Berkay Yıldız Mimarlık ile modern tasarımı keşfedin.
             </video>
         </div>
 
         <div class="prism-container">
             <img class="toggling-text" src="../../images/toggling-text.gif"
-                alt="Animated text showcasing Berkay Yıldız Architecture" height="80" loading="lazy">
+                alt="Berkay Yıldız Mimarlık'ı sergileyen animasyonlu metin" height="80" loading="lazy">
         </div>
     </section>
 
