logo became home link

--- a/en/services/index.html
+++ b/en/services/index.html
@@ -109,7 +109,7 @@
             <div class="horizontal-line left-line"></div>
             <div class="circle" style="display: none;"></div>
             <div class="rectanglular-bg"></div>
-            <a href="https://berkayyildizmimarlik.com/works/"
+            <a href="https://berkayyildizmimarlik.com/en/works/"
                 style="text-decoration: none; color: black; height: 100%;">
                 <p class="view-portfolio-p">View Portfolio</p>
             </a>
