--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,6 @@
 <nav class="navbar">
-    <img src="/images/logo.png" alt="navbar logo" width="140" style="margin-right: auto;">
+    <a href="https://berkayyildizmimarlik.com/"><img src="/images/logo.png" alt="navbar logo" width="140"
+            style="margin-right: auto;"></a>
     <button class="navbar-toggle" id="navbar-toggle" aria-label="Toggle navigation">
         <span></span>
         <span></span>
